example/lib/src/arbs/errors/app_he.arb
{
  "@@locale": "he",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "אירעה שגיאה",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "אירעה שגיאה בלתי צפויה",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "דיווח באג נשלח בהצלחה.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}